--- a/Views/PasswordReset/PasswordResetSelectUserView.xaml
+++ b/Views/PasswordReset/PasswordResetSelectUserView.xaml
@@ -34,21 +34,19 @@
             </TextBox>
         </Grid>
 
-        <StackPanel Grid.Row="2">
-            <Grid HorizontalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0"
-                    Margin="4"
-                    Content="{lex:LocTextUpper Key=UI_CANCEL}"
-                    Command="{Binding CancelCommand}" />
-                <Button Grid.Column="1"
-                    Margin="4"
-                    Content="{lex:LocTextUpper Key=UI_CONTINUE}"
-                    Command="{Binding RequestPasswordResetCommand}" />
-            </Grid>
-        </StackPanel>
+        <Grid HorizontalAlignment="Center" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"
+                Margin="4"
+                Content="{lex:LocTextUpper Key=UI_CANCEL}"
+                Command="{Binding CancelCommand}" />
+            <Button Grid.Column="1"
+                Margin="4"
+                Content="{lex:LocTextUpper Key=UI_CONTINUE}"
+                Command="{Binding RequestPasswordResetCommand}" />
+        </Grid>
     </Grid>
 </UserControl>
