--- a/Views/PasswordReset/PasswordResetConfirmationView.xaml
+++ b/Views/PasswordReset/PasswordResetConfirmationView.xaml
@@ -29,7 +29,8 @@
             <TextBlock Text="{Binding ConfirmationCodeMessage}"
                        Foreground="YellowGreen"
                        Margin="0,0,0,20"
-                       FontSize="16">
+                       FontSize="16"
+                       TextWrapping="Wrap">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Setter Property="Opacity" Value="0.5" />
