--- a/Views/PasswordReset/PasswordResetFailureView.xaml
+++ b/Views/PasswordReset/PasswordResetFailureView.xaml
@@ -23,6 +23,8 @@
         <TextBlock VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    Grid.Row="1"
+                   TextWrapping="Wrap"
+                   TextAlignment="Center"
                    Text="{Binding ErrorMessage}" />
         <Button Content="{lex:LocText Key=DISMISS}"
                 Command="{Binding FinishCommand}"
