--- a/Views/PasswordReset/PasswordResetFailureView.xaml
+++ b/Views/PasswordReset/PasswordResetFailureView.xaml
@@ -22,6 +22,8 @@
                      Height="64" />
         <TextBlock VerticalAlignment="Center"
                    HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
+                   TextAlignment="Center"
                    Grid.Row="1"
                    Text="{Binding ErrorMessage}" />
         <Button Content="{lex:LocText Key=DISMISS}"
