--- a/Views/UserDepositOnlineView.xaml
+++ b/Views/UserDepositOnlineView.xaml
@@ -77,7 +77,7 @@
                     <ItemsControl Grid.Row="2" Margin="0,0,0,24" ItemsSource="{Binding Path=Presets}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Button Margin="4" Content="{Binding}" ContentStringFormat="C2" Command="{Binding Path=DataContext.SelectAmountCommand, RelativeSource={RelativeSource AncestorType=Border}}" CommandParameter="{Binding}" />
+                                <Button Margin="4" Content="{Binding}" ContentStringFormat="N2" Command="{Binding Path=DataContext.SelectAmountCommand, RelativeSource={RelativeSource AncestorType=Border}}" CommandParameter="{Binding}" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                         <ItemsControl.ItemsPanel>
@@ -91,7 +91,7 @@
                         <TextBlock FontSize="14" Text="{lex:LocText Key=DEPOSIT_AMOUNT}" Margin="0,0,4,0" />
                         <TextBlock FontSize="14" Text="(" Visibility="{Binding Path=OnlinePaymentsConfiguration.AllowCustomValue, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
                         <TextBlock FontSize="14" Margin="0,0,4,0" Text="{lex:LocText Key=VE_MINIMUM_AMOUNT}" Visibility="{Binding Path=OnlinePaymentsConfiguration.AllowCustomValue, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
-                        <TextBlock FontSize="14" Text="{Binding Path=OnlinePaymentsConfiguration.MinimumAmount, StringFormat=C2}" Visibility="{Binding Path=OnlinePaymentsConfiguration.AllowCustomValue, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
+                        <TextBlock FontSize="14" Text="{Binding Path=OnlinePaymentsConfiguration.MinimumAmount, StringFormat=N2}" Visibility="{Binding Path=OnlinePaymentsConfiguration.AllowCustomValue, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
                         <TextBlock FontSize="14" Text=")" Visibility="{Binding Path=OnlinePaymentsConfiguration.AllowCustomValue, Converter={StaticResource BoolToVisibilityConverter}, FallbackValue=Collapsed}" />
                     </StackPanel>
 
@@ -137,7 +137,7 @@
 
                     <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" >
                         <TextBlock FontSize="14" Text="{lex:LocText Key=DEPOSIT_AMOUNT}" />
-                        <TextBlock Margin="4,0,0,0" Text="{wd:CultureAwareBinding Amount, StringFormat=C2}" FontSize="14" Validation.ErrorTemplate="{x:Null}" />
+                        <TextBlock Margin="4,0,0,0" Text="{wd:CultureAwareBinding Amount, StringFormat=N2}" FontSize="14" Validation.ErrorTemplate="{x:Null}" />
                     </StackPanel>
 
                     <Separator Grid.Row="3" Margin="0,4,0,24" />
