Task 235: Delay between verifications.

--- a/Views/PasswordReset/PasswordResetSelectUserView.xaml
+++ b/Views/PasswordReset/PasswordResetSelectUserView.xaml
@@ -44,9 +44,19 @@
                 Content="{lex:LocTextUpper Key=UI_CANCEL}"
                 Command="{Binding CancelCommand}" />
             <Button Grid.Column="1"
-                Margin="4"
-                Content="{lex:LocTextUpper Key=UI_CONTINUE}"
-                Command="{Binding RequestPasswordResetCommand}" />
+                    Margin="4"
+                    Command="{Binding RequestPasswordResetCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{lex:LocTextUpper Key=UI_CONTINUE}" />
+                    <TextBlock Visibility="{Binding UserVerificationViewModel.IsVerificationLocked, Converter={StaticResource BoolToVisibilityConverter}}"
+                               Text="{Binding UserVerificationViewModel.Countdown, StringFormat=mm\\:ss, FallbackValue=00:00}"
+                               Margin="10,0,0,0"
+                               FontSize="14"
+                               FontWeight="Medium"
+                               Foreground="#DD000000"
+                               />
+                </StackPanel>
+            </Button>
         </Grid>
     </Grid>
 </UserControl>
