--- a/Views/PasswordReset/PasswordResetConfirmationView.xaml
+++ b/Views/PasswordReset/PasswordResetConfirmationView.xaml
@@ -52,6 +52,10 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
                 <Button Grid.Column="0"
                     Margin="4"
                     Content="{lex:LocTextUpper Key=UI_CANCEL}"
@@ -60,6 +64,22 @@
                     Margin="4"
                     Content="{lex:LocTextUpper Key=UI_CONTINUE}"
                     Command="{Binding ConfirmCommand}" />
+                <Button Grid.Row="1"
+                        Grid.ColumnSpan="2"
+                        Margin="4"
+                        Command="{Binding FallbackCommand}"
+                        Visibility="{Binding UserVerificationFallbackViewModel.IsSMSFallbackAvailable, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{lex:LocTextUpper Key=UI_RETRY_WITH_SMS}" />
+                        <TextBlock Visibility="{Binding UserVerificationFallbackViewModel.IsVerificationFallbackLocked, Converter={StaticResource BoolToVisibilityConverter}}"
+                               Text="{Binding UserVerificationFallbackViewModel.Countdown, StringFormat=mm\\:ss, FallbackValue=00:00}"
+                               Margin="10,0,0,0"
+                               FontSize="14"
+                               FontWeight="Medium"
+                               Foreground="#DD000000"
+                               />
+                    </StackPanel>
+                </Button>
             </Grid>
         </StackPanel>
     </Grid>
