--- a/Views/Registration/RegisterConfirmationView.xaml
+++ b/Views/Registration/RegisterConfirmationView.xaml
@@ -185,9 +185,19 @@
                         <Border Grid.Column="2"
                                 Margin="2"
                                 Background="Transparent">
-                            <Button Content="{lex:LocTextUpper Key=REGISTER_ACTION_SEND_CODE}"
-                                    Command="{Binding SendConfirmationCommand}"
-                                    Margin="4" />
+                            <Button Command="{Binding SendConfirmationCommand}"
+                                    Margin="4">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{lex:LocTextUpper Key=REGISTER_ACTION_SEND_CODE}" />
+                                    <TextBlock Visibility="{Binding UserVerificationViewModel.IsVerificationLocked, Converter={StaticResource BoolToVisibilityConverter}}"
+                                               Text="{Binding UserVerificationViewModel.Countdown, StringFormat=mm\\:ss, FallbackValue=00:00}"
+                                               Margin="10,0,0,0"
+                                               FontSize="14"
+                                               FontWeight="Medium"
+                                               Foreground="#DD000000"
+                                               />
+                                </StackPanel>
+                            </Button>
                         </Border>
                     </Grid>
                 </Grid>
